# roster

./: Cargo.toml  README.md
examples/: cpu-only.yaml  train-and-eval.yaml
src/: broadcast.rs  error.rs  event.rs  lib.rs  main.rs  paths.rs
src/daemon/: mod.rs
src/executor/: mod.rs  shell.rs
src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
src/resource/: discovery.rs  mod.rs  pool.rs
src/scheduler/: mod.rs
src/store/: mod.rs
src/workflow/: dag.rs  mod.rs  model.rs  spec.rs
