[package]
name = "roster"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "roster"
path = "src/main.rs"

[features]
nvml = []
loom = ["dep:loom"]

[dependencies]
anyhow = "1"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sysinfo = "0.30"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"]}
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
loom = { version = "0.7", optional = true }
hdrhistogram = "7"
core_affinity = "0.8"